@@ -1,6 +1,8 @@
 --------------------------
 Changes in 1.9 (not yet released)
 
+- Add SMaterialLayer::TextureWrapW for cubemap texture wrap mode at W axis.
+- Add cubemap texture support for D3D9 and OpenGL drivers.
 - Do no longer re-calculate md2 frames when they don't change (thx @npc for reporting)
 - Add multibyteToWString wrapper functions around mbstowcs which work with Irrlicht string class.
 - Fix: addFileArchive now grab()'s the archive when you pass one in by pointer.
